# datafusion-py-rs-example

./: Cargo.toml  Dockerfile  README.md  pyproject.toml  requirements.txt
python/: data_utils.py  main.py
src/: error.rs  lib.rs
