[package]
name = "datafusion_py_rs_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "datafusion_py_rs_example"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
datafusion = { version = "37", features = ["pyarrow", "default"] }
parquet = "51"
pyo3 = "0.20.0"
pyo3-asyncio = { version = "0.20", features = [
    "tokio",
    "tokio-runtime",
    "attributes",
    "pyo3-asyncio-macros",
] }
anyhow = "1"